# nadir

./: .gitignore  Cargo.toml  license  nadir.toml  out  readme.md
backends/maildir/: Cargo.toml
backends/telegram/: Cargo.toml
crates/nadir-backend-common/: Cargo.toml
crates/nadir-net/: Cargo.toml
crates/nadir-net/src/: lib.rs  util.rs  websocket.rs
crates/nadir-types/: Cargo.toml
crates/nadir-types/src/: lib.rs  message.rs  model.rs
crates/net/: Cargo.toml
crates/net/src/: lib.rs  util.rs  websocket.rs
docs/: protocol.md
src/: fronend.rs  main.rs  model.rs  msg.rs  net.rs  opt.rs  render.rs  server.rs  ui.rs  util.rs  view.rs
src/model/: group_list.rs  message_group.rs
src/server/: group_server.rs  maildir_local_server.rs  test_server.rs
src/util/: dirty_check_lock.rs
src/view/: group_list_view.rs  group_view.rs  indexed_view.rs  tag_view.rs  tagged_group.rs
