[package]
name = "nadir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22"
tokio = { version = "1", features = ["rt", "time"] }
fixed = "1"
tokio-tungstenite = "0.15.0"
async-trait = "0.1.51"
serde = { version = "1", features = ["derive"] }
