[package]
name = "nadir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1.51"
crossterm = "0.22"
fixed = "1"
futures = "0.3"
tokio = { version = "1", features = ["rt", "time", "macros"] }
tokio-util = "0.6.9"
tokio-tungstenite = "0.15.0"
toml = "0.5.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slotmap = "1"

nadir-net = { path = "crates/net" }

[workspace]
members = [".", "crates/net"]
