[package]
name = "nadir-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1.51"
futures = "0.3"
tokio = "1"
tokio-tungstenite = "0.15.0"
tokio-util = "0.6.9"
toml = "0.5.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
