[package]
name = "nadir-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1.51"
futures = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snow = { version = "0.8.0", optional = true }
tokio = { version = "1", features = ["rt"] }
tokio-tungstenite = { version = "0.15.0", optional = true }
tokio-util = "0.6.9"
tokio-stream = "0.1.8"

[features]
websocket-secure = ["websocket", "tokio-tungstenite/rustls-tls"]
websocket = ["tokio-tungstenite"]
noise-over-tcp = ["snow"]
windows-named-pipe = []
unix-domain-socket = []

default = ["websocket", "windows-named-pipe", "unix-domain-socket"]
